# eFinder-old

./: .gitignore  ASICamera.py  CHANGELOG.md  CameraDebug.py  CameraInterface.py  Coordinates.py  Display.py  Dockerfile  HandpadDebug.py  Nexus.py  NexusDebug.py  QHYCamera.py  README.md  common.py  eFinder Ver 11 notes.docx  eFinder install on 32bit Raspian OS.docx  eFinder.config  eFinder.py  eFinder11_10_9_USB.py  eFinder11_10_9_wifi.py  eFinder12_2_wifi.py  eFinderVNCGUI.py  eFinderVNCGUI11_10_2_wifi.py  eFinderVNCGUI_wifi.py  eFinder_USB.py  eFinder_wifi.py  main.py  pi-install.sh  platesolve.py  pyproject.toml  utils.py
doc/: eFinder install on 32bit Raspian OS.docx  eFinder install on Mac.md
scripts/: start.sh  startVNCGUI.sh
src/: ASICamera.py  CameraDebug.py  CameraInterface.py  Coordinates.py  Display.py  Nexus.py  NexusDebug.py  NexusInterface.py  QHYCamera.py  common.py  eFinder.py  eFinderVNCGUI.py  gui.py  handpad.py  platesolve.py  utils.py
tests/: handbox.py
